Case Study Buttons fixed on mobile
No hover event

--- a/css/styles.css
+++ b/css/styles.css
@@ -878,6 +878,14 @@ button.next, button.prev{
 	margin-top: -5%;
 }
 
+button.next:hover{
+	right: -210px;
+}
+
+button.prev:hover{
+	left: -210px;
+}
+
 }
 
 
